--- a/index.html
+++ b/index.html
@@ -117,9 +117,9 @@
 <footer>
         <h6>
                 
-                email <a href="mailto:Borisblack@hotmail.com"><span>Boris Black</span></a>
+                email: <a href="mailto:Borisblack@hotmail.com"><span>Boris Black</span></a>
               
-                 or call him: <span>(617) 429-1955</span> 
+                 call: <span>(617) 429-1955</span> 
                 </h6>
 </footer>
   </body>
