color combo changed

--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
     </div>
     </header>
     <div class='ad'>
-    <h5>Our Reality <span>=</span> Your Dream <span>+</span> My Dream  </h5>
+    <h5>Our <span>Reality</span>  = Your <span>Dream</span> + My <span>Dream</span> </h5>
     <a href="mailto:borisblack@hotmail.com" ><button class="btn-primary"> Let's film it </button></a>
 </div>
 <footer>
