enlarged size of links

--- a/index.html
+++ b/index.html
@@ -111,16 +111,19 @@
     </div>
     </header>
     <div class='ad'>
-    <h5>Our <span>Reality</span>  = Your <span>Dream</span> + My <span>Dream</span> </h5>
+    <h4>Our Reality <span> = </span> Your Dream <span> + </span> My Dream </h4>
     <a href="mailto:borisblack@hotmail.com" ><button class="btn-primary"> Let's film it </button></a>
 </div>
 <footer>
-        <h6>
+        <h4>
                 
-                email: <a href="mailto:Borisblack@hotmail.com"><span>Boris Black</span></a>
+                email: <a href="mailto:Borisblack@hotmail.com"><span>Boris Black</span>
+                </a>
+                <br>
+                <br>
               
                  call: <span>(617) 429-1955</span> 
-                </h6>
+                </h4>
 </footer>
   </body>
 </html>
