changes font weight

--- a/index.html
+++ b/index.html
@@ -111,7 +111,8 @@
     </div>
     </header>
     <div class='ad'>
-    <h4>Our Reality <span> = </span> Your Dream <span> + </span> My Dream </h4>
+    <h2>Our Reality  <span> = </span></h2>
+  <h2>Your Dream<span> + </span> My Dream </h2>
     <a href="mailto:borisblack@hotmail.com" ><button class="btn-primary"> Let's film it </button></a>
 </div>
 <footer>
@@ -120,7 +121,7 @@
                 email: <a href="mailto:Borisblack@hotmail.com"><span>Boris Black</span>
                 </a>
                 <br>
-                <br>
+
               
                  call: <span>(617) 429-1955</span> 
                 </h4>
